Refactored backend code to reduce stream to list and list to stream convertions